--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,10 +13,13 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@azure/ai-projects": "^1.0.1",
+    "@azure/identity": "^4.5.0",
     "@youbiquti/core": "workspace:*",
     "@youbiquti/gno-tools": "workspace:*",
     "@youbiquti/service-graph": "workspace:*",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lowdb": "^7.0.1",
     "nanoid": "^5.0.7"
